FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/FSL_EnergyMeterReading__c.object-meta.xml
<CustomObject>
    <label>Energy Meter Reading</label>
    <nameField>
        <displayFormat>EMR-{00000000}</displayFormat>
        <label>Energy Meter Reading Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Meter Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>