FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_AnomalyDetected__c.field-meta.xml
<CustomField>
    <fullName>FSL_AnomalyDetected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anomaly detected ?</label>
    <type>Checkbox</type>
</CustomField>