FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_Delivery__c.field-meta.xml
<CustomField>
    <fullName>FSL_Delivery__c</fullName>
    <description>MB-3875</description>
    <label>Delivery</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>