FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_EnergyMeterReadingCode__c.field-meta.xml
<CustomField>
    <fullName>FSL_EnergyMeterReadingCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Energy Meter Reading Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>