FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_Estimated__c.field-meta.xml
<CustomField>
    <fullName>FSL_Estimated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimated</label>
    <type>Checkbox</type>
</CustomField>