FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_MaximumValue__c.field-meta.xml
<CustomField>
    <fullName>FSL_MaximumValue__c</fullName>
    <description>MB-3875</description>
    <label>Maximum value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>