FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_NumberOfDecimals__c.field-meta.xml
<CustomField>
    <fullName>FSL_NumberOfDecimals__c</fullName>
    <description>MB-3875</description>
    <label>Number of decimals</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>