FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_ReplacedAssetName__c.field-meta.xml
<CustomField>
    <fullName>FSL_ReplacedAssetName__c</fullName>
    <label>Replaced asset name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>