FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_ReplacedBy__c.field-meta.xml
<CustomField>
    <fullName>FSL_ReplacedBy__c</fullName>
    <description>MB-3875</description>
    <label>Replaced by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRDF</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Enedis</fullName>
            </value>
            <value>
                <fullName>Engie Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>