FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_ServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>FSL_ServiceAppointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MB-3875</description>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Energy Meter Readings</relationshipLabel>
    <relationshipName>Energy_Meter_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>