FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FSL_StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>MB-3875</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>