FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_Status__c.field-meta.xml
<CustomField>
    <fullName>FSL_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meter inaccessible</fullName>
            </value>
            <value>
                <fullName>Temporary index entry</fullName>
            </value>
            <value>
                <fullName>Meter out of order</fullName>
            </value>
            <value>
                <fullName>Reading OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>