FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_TankValue__c.field-meta.xml
<CustomField>
    <fullName>FSL_TankValue__c</fullName>
    <description>MB-3875</description>
    <label>Tank value</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>