FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_Unit__c.field-meta.xml
<CustomField>
    <fullName>FSL_Unit__c</fullName>
    <description>MB-3875</description>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>CHA</fullName>
            </value>
            <value>
                <fullName>DAL</fullName>
            </value>
            <value>
                <fullName>DET</fullName>
            </value>
            <value>
                <fullName>ENS</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>EURO</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>FAGE</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>FREMP</fullName>
            </value>
            <value>
                <fullName>GWH</fullName>
            </value>
            <value>
                <fullName>GWHPCS</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>HL</fullName>
            </value>
            <value>
                <fullName>HM3</fullName>
            </value>
            <value>
                <fullName>JOU</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>KM3</fullName>
            </value>
            <value>
                <fullName>KNM3</fullName>
            </value>
            <value>
                <fullName>KTH</fullName>
            </value>
            <value>
                <fullName>KVA</fullName>
            </value>
            <value>
                <fullName>KVAR</fullName>
            </value>
            <value>
                <fullName>KVARH</fullName>
            </value>
            <value>
                <fullName>KW</fullName>
            </value>
            <value>
                <fullName>KWH</fullName>
            </value>
            <value>
                <fullName>KWHPCI</fullName>
            </value>
            <value>
                <fullName>KWHPCS</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>