FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/fields/FSL_ZeroCrossingRecorded__c.field-meta.xml
<CustomField>
    <fullName>FSL_ZeroCrossingRecorded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MB-3875</description>
    <label>Zero crossing recorded ?</label>
    <type>Checkbox</type>
</CustomField>