FSL/force-app/main/default/objects/FSL_EnergyMeterReading__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSL_Status__c</columns>
    <columns>FSL_Unit__c</columns>
    <columns>FSL_Comment__c</columns>
    <columns>FSL_AnomalyDetected__c</columns>
    <columns>FSL_ZeroCrossingRecorded__c</columns>
    <columns>FSL_StartDate__c</columns>
    <columns>FSL_EnergyMeterReadingCode__c</columns>
    <columns>FSL_ReplacedBy__c</columns>
    <columns>FSL_Index__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>